--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -56,15 +56,27 @@
     </div>
   </div>
 
-  <div class="tab-container">
-    <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
-      <span>Member Info</span>
+  <div class="relative flex items-center mb-6">
+    <!-- Left Arrow -->
+    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="tab-container-scroll-left transition duration-300">
+      <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
-    <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5 text-soft' %>
-      <span>Trends</span>
+    <div class="tab-container" data-tabs-target="container">
+      <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
+        <span>Member Info</span>
+      </button>
+
+      <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5 text-soft' %>
+        <span>Trends</span>
+      </button>
+    </div>
+
+    <!-- Right Arrow -->
+    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="tab-container-scroll-right transition duration-300">
+      <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
 
