--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,20 +21,32 @@
     <% end %>
   </div>
 
-  <div class="tab-container">
-    <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
-      <span>User Info</span>
+  <div class="relative flex items-center mb-6">
+    <!-- Left Arrow -->
+    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="tab-container-scroll-left transition duration-300">
+      <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
-    <button type="button" id="teamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'teamsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
-      <span>Teams</span>
-    </button>
+    <div class="tab-container" data-tabs-target="container">
+      <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
+        <span>User Info</span>
+      </button>
 
-    <button type="button" id="runsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'runsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/runner.svg', class: 'size-5 text-soft' %>
-      <span>Runs</span>
+      <button type="button" id="teamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'teamsTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
+        <span>Teams</span>
+      </button>
+
+      <button type="button" id="runsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'runsTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/runner.svg', class: 'size-5 text-soft' %>
+        <span>Runs</span>
+      </button>
+    </div>
+
+    <!-- Right Arrow -->
+    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="tab-container-scroll-right transition duration-300">
+      <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
 
