increase card border radius

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-slate-50/85 dark:bg-slate-800/85 divide-y rounded-lg border p-6 shadow backdrop-blur-sm dark:divide-slate-700 dark:border-slate-700 dark:shadow-none">
+<div class="card">
   <%= link_to user, data: { turbo: false }, class: 'group flex items-start gap-4 flex-1' do %>
 
     <% if user.avatar.attached? %>
