--- a/app/views/teams/shared/_team.html.erb
+++ b/app/views/teams/shared/_team.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-slate-50/85 dark:bg-slate-800/85 divide-y rounded-lg border p-6 shadow backdrop-blur-sm dark:divide-slate-700 dark:border-slate-700 dark:shadow-none">
+<div class="card">
   <div class="flex items-start gap-4">
     <%= link_to team, data: { turbo: false }, class: 'shrink-0' do %>
       <% if team.photo.attached? %>
