--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -90,7 +90,7 @@
 
   <div class="relative flex items-center mb-6">
     <!-- Left Arrow -->
-    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="tab-container-scroll-left transition duration-300">
+    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
@@ -136,7 +136,7 @@
     </div>
 
     <!-- Right Arrow -->
-    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="tab-container-scroll-right transition duration-300">
+    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
       <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
