--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -8,6 +8,9 @@
     </button>
 
     <div class="tab-container" data-tabs-target="container">
+      <!-- Tab Indicator -->
+      <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
+
       <button type="button" id="editTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'editTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
         <span>Edit Team</span>
