--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -94,10 +94,9 @@
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
-    <div class="tab-container" data-tabs-target="container">
+    <div class="tab-container mx-auto" data-tabs-target="container">
       <!-- Tab Indicator -->
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
-
 
       <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
