--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -17,14 +17,18 @@
 
   .btn-tab {
     @apply rounded-md py-2 px-6 flex items-center gap-2.5 text-sm text-normal hover:text-soft snap-center z-10;
-  }
 
-  .btn-tab-active {
-    @apply text-normal hover:text-normal;
+    &.btn-tab-icon-only {
+      @apply p-2;
+    }
+
+    &.btn-tab-active {
+      @apply hover:text-normal;
+    }
   }
 
   .tab-container {
-    @apply flex items-center gap-0.5 bg-slate-50/85 dark:bg-slate-800/85 p-0.5 rounded-lg shadow-md dark:shadow-none overflow-x-auto whitespace-nowrap max-w-max mx-auto sticky top-4 backdrop-blur-sm z-30 snap-x hide-scrollbar;
+    @apply flex items-center gap-0.5 bg-slate-50/85 dark:bg-slate-800/85 border dark:border-none p-0.5 rounded-lg shadow-md dark:shadow-none overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
   }
 
   .tab-container-scroll-left {
