--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,7 +7,7 @@
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
-    <div class="tab-container" data-tabs-target="container">
+    <div class="tab-container mx-auto" data-tabs-target="container">
       <!-- Tab Indicator -->
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
