--- a/app/views/teams/member/_trends_graphs.html.erb
+++ b/app/views/teams/member/_trends_graphs.html.erb
@@ -1,19 +1,44 @@
 <div class="mb-24">
-  <div class="mt-10 mb-6 space-y-1">
+  <div class="pt-6 mb-6 space-y-1 border-t border-slate-200 dark:border-slate-700">
     <h2 class="subheading">Miles <%= date_range_description.titlecase %></h2>
     <p class="text-sm text-soft">This graph shows how many miles <%= @member == current_user ? 'you' : @member.first_name %> ran <%= date_range_description %>.</p>
   </div>
 
-  <% chart_partial, xtitle, ytitle = case @chart_type %>
-    <% when 'column' %>
-      <% ['shared/column_chart', 'Date', '# of miles'] %>
-    <% when 'line' %>
-      <% ['shared/line_chart', 'Date', '# of miles'] %>
-    <% when 'bar' %>
-      <% ['shared/bar_chart', '# of miles', 'Date'] %>
-  <% end %>
+  <div data-controller="chart-type" data-chart-type-active-class="btn-tab-active" data-chart-type-default-tab-value="columnChart">
+    <div class="relative flex items-center justify-end mb-3">
+      <div class="tab-container" data-chart-type-target="container">
+        <!-- Tab Indicator -->
+        <span data-chart-type-target="indicator" class="sliding-tab-indicator"></span>
 
-  <%= render chart_partial, data: @miles_data, precision: 3, xtitle:, ytitle: %>
+        <button type="button" id="columnChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
+          <%= inline_svg_tag 'icons/chart-column.svg', class: 'size-5' %>
+          <span class="sr-only">Column Chart</span>
+        </button>
+
+        <button type="button" id="lineChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+          <%= inline_svg_tag 'icons/chart-line.svg', class: 'size-5' %>
+          <span class="sr-only">Line Chart</span>
+        </button>
+
+        <button type="button" id="barChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+          <%= inline_svg_tag 'icons/chart-bar.svg', class: 'size-5' %>
+          <span class="sr-only">Bar Chart</span>
+        </button>
+      </div>
+    </div>
+
+    <div id="columnChart" data-chart-type-target="tab" class="card">
+      <%= render 'shared/column_chart', data:  @miles_data, precision: 3, xtitle: 'Date', ytitle: '# of miles' %>
+    </div>
+
+    <div id="lineChart" data-chart-type-target="tab" class="card hidden">
+      <%= render 'shared/line_chart', data:  @miles_data, precision: 3, xtitle: 'Date', ytitle: '# of miles' %>
+    </div>
+
+    <div id="barChart" data-chart-type-target="tab" class="card hidden">
+      <%= render 'shared/bar_chart', data:  @miles_data, precision: 3, xtitle: '# of miles', ytitle: 'Date' %>
+    </div>
+  </div>
 </div>
 
 <div class="mb-24">
@@ -22,14 +47,39 @@
     <p class="text-sm text-soft">This graph shows how many long runs <%= @member == current_user ? 'you' : @member.first_name %> ran <%= date_range_description %>.</p>
   </div>
 
-  <% chart_partial, xtitle, ytitle = case @chart_type %>
-    <% when 'column' %>
-      <% ['shared/column_chart', 'Date', '# of long runs'] %>
-    <% when 'line' %>
-      <% ['shared/line_chart', 'Date', '# of long runs'] %>
-    <% when 'bar' %>
-      <% ['shared/bar_chart', '# of long runs', 'Date'] %>
-  <% end %>
+  <div data-controller="chart-type" data-chart-type-active-class="btn-tab-active" data-chart-type-default-tab-value="columnChart">
+    <div class="relative flex items-center justify-end mb-3">
+      <div class="tab-container" data-chart-type-target="container">
+        <!-- Tab Indicator -->
+        <span data-chart-type-target="indicator" class="sliding-tab-indicator"></span>
 
-  <%= render chart_partial, data: @long_runs_data, xtitle:, ytitle: %>
+        <button type="button" id="columnChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
+          <%= inline_svg_tag 'icons/chart-column.svg', class: 'size-5' %>
+          <span class="sr-only">Column Chart</span>
+        </button>
+
+        <button type="button" id="lineChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+          <%= inline_svg_tag 'icons/chart-line.svg', class: 'size-5' %>
+          <span class="sr-only">Line Chart</span>
+        </button>
+
+        <button type="button" id="barChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+          <%= inline_svg_tag 'icons/chart-bar.svg', class: 'size-5' %>
+          <span class="sr-only">Bar Chart</span>
+        </button>
+      </div>
+    </div>
+
+    <div id="columnChart" data-chart-type-target="tab" class="card">
+      <%= render 'shared/column_chart', data:  @long_runs_data, precision: 3, xtitle: 'Date', ytitle: '# of miles' %>
+    </div>
+
+    <div id="lineChart" data-chart-type-target="tab" class="card hidden">
+      <%= render 'shared/line_chart', data:  @long_runs_data, precision: 3, xtitle: 'Date', ytitle: '# of miles' %>
+    </div>
+
+    <div id="barChart" data-chart-type-target="tab" class="card hidden">
+      <%= render 'shared/bar_chart', data:  @long_runs_data, precision: 3, xtitle: '# of miles', ytitle: 'Date' %>
+    </div>
+  </div>
 </div>
