--- a/app/views/teams/show/_trends.html.erb
+++ b/app/views/teams/show/_trends.html.erb
@@ -3,9 +3,9 @@
   <p class="text-soft">Recent trends in <%= team.name %>.</p>
 </div>
 
-<p class="text-right"><%= link_to 'View your personal trends', team_member_path(team, current_user, tab: 'trendsTab'), class: 'btn-link text-xs' %></p>
+<%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal trends', team_member_path(team, current_user, tab: 'trendsTab'), class: 'btn-link text-xs' } if current_user.member_of?(team) %>
 
-<div>
+<div class="mb-24">
   <%= form_with url: team_path(team), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'teamTrends', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation search-form' } do %>
 
     <div class="form-group">
@@ -35,14 +35,9 @@
       <%= date_field_tag :trends_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
       <span class="hidden my-1 error-message" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
     </div>
-
-    <div class="form-group">
-      <%= label_tag :chart_type, 'Chart type', class: 'form-label' %>
-      <%= select_tag :chart_type, options_for_select([['Column', 'column'], ['Line', :line], ['Bar', 'bar']], @chart_type || 'column'), data: { action: 'input->search-form#searchNow' }, class: 'form-select' %>
-    </div>
-  <% end %>
-
-  <%= turbo_frame_tag 'teamTrends' do %>
-    <%= render 'teams/show/trends_graphs', team: team, date_range_description: @trends_date_range_description %>
   <% end %>
 </div>
+
+<%= turbo_frame_tag 'teamTrends' do %>
+  <%= render 'teams/show/trends_graphs', team: team, date_range_description: @trends_date_range_description %>
+<% end %>
