--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -21,9 +21,9 @@
     <div class="mb-6 space-y-1.5">
       <%= link_to profile_path, aria: { current: current_is_profile ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_profile}" do %>
         <% if current_user.avatar.attached? %>
-          <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
+          <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
         <% elsif current_is_profile %>
-          <%= inline_svg_tag 'icons/profile-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
+          <%= inline_svg_tag 'icons/profile-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
         <% else %>
           <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
         <% end %>
@@ -32,7 +32,7 @@
 
       <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_teams}" do %>
         <% if current_is_teams %>
-          <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:gelatine-animation motion-safe:group-focus:gelatine-animation' %>
+          <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
         <% else %>
           <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:gelatine-animation motion-safe:group-focus:gelatine-animation' %>
         <% end %>
@@ -41,7 +41,7 @@
 
       <%= link_to search_path, aria: { current: current_is_search ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_search}" do %>
         <% if current_is_search %>
-          <%= inline_svg_tag 'icons/search-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:wiggle-animation motion-safe:group-focus:wiggle-animation' %>
+          <%= inline_svg_tag 'icons/search-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
         <% else %>
           <%= inline_svg_tag 'icons/search.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:wiggle-animation motion-safe:group-focus:wiggle-animation' %>
         <% end %>
@@ -50,7 +50,7 @@
 
       <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_edit_user}" do %>
         <% if current_is_edit_user %>
-          <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white spin-animation motion-safe:group-hover:spin motion-safe:group-focus:spin' %>
+          <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
         <% else %>
           <%= inline_svg_tag 'icons/settings.svg', class: 'size-5 text-soft dark:group-focus:text-white spin-animation motion-safe:group-hover:spin motion-safe:group-focus:spin' %>
         <% end %>
