style: adjust shadows and colors of tabs design

--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -23,12 +23,12 @@
     }
 
     &.btn-tab-active {
-      @apply hover:text-normal;
+      @apply text-indigo-500 hover:text-indigo-500 dark:text-normal dark:hover:text-normal;
     }
   }
 
   .tab-container {
-    @apply flex items-center gap-0.5 bg-slate-50/85 dark:bg-slate-800/85 border dark:border-none p-0.5 rounded-lg shadow-md dark:shadow-none overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
+    @apply flex items-center bg-slate-50/85 dark:bg-slate-800/85 border dark:border-none p-0.5 rounded-lg shadow-inner dark:shadow-none overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
   }
 
   .tab-container-scroll-left {
@@ -40,6 +40,6 @@
   }
 
   .sliding-tab-indicator {
-    @apply absolute top-1/2 -translate-y-1/2 bg-slate-200/50 dark:bg-slate-700/50 rounded-md transition-all duration-300 w-0 h-[calc(100%-0.25rem)];
+    @apply absolute top-1/2 -translate-y-1/2 bg-white dark:bg-slate-700/50 drop-shadow-md dark:drop-shadow-none rounded-md transition-all duration-300 w-0 h-[calc(100%-0.25rem)];
   }
 }
