--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -12,17 +12,17 @@
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
       <button type="button" id="ownedTeamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'ownedTeamsTab' ? 'btn-tab-active' : '' %>">
-        <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
+        <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
         <span>My Teams</span>
       </button>
 
       <button type="button" id="teamMembershipsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'teamMembershipsTab' ? 'btn-tab-active' : '' %>">
-        <%= inline_svg_tag 'icons/id-card.svg', class: 'size-5 text-soft' %>
+        <%= inline_svg_tag 'icons/id-card.svg', class: 'size-5' %>
         <span>My Team Memberships</span>
       </button>
 
       <button type="button" id="otherTeamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'otherTeamsTab' ? 'btn-tab-active' : '' %>">
-        <%= inline_svg_tag 'icons/search.svg', class: 'size-5 text-soft' %>
+        <%= inline_svg_tag 'icons/search.svg', class: 'size-5' %>
         <span>Find Teams</span>
       </button>
     </div>
