--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,12 +12,12 @@
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
       <button type="button" id="accountTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'accountTab' ? 'btn-tab-active' : '' %>">
-        <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 text-soft' %>
+        <%= inline_svg_tag 'icons/profile.svg', class: 'size-5' %>
         <span>Account</span>
       </button>
 
       <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'settingsTab' ? 'btn-tab-active' : '' %>">
-        <%= inline_svg_tag 'icons/settings.svg', class: 'size-5 text-soft' %>
+        <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
         <span>Settings</span>
       </button>
     </div>
