--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,36 +23,36 @@
         <% if current_user.avatar.attached? %>
           <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
         <% elsif current_is_profile %>
-          <%= inline_svg_tag 'icons/profile-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
+          <%= inline_svg_tag 'icons/profile-filled.svg', class: 'size-5 dark:group-focus:text-white' %>
         <% else %>
-          <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
+          <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 dark:group-focus:text-white motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
         <% end %>
         <span>Profile</span>
       <% end %>
 
       <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_teams}" do %>
         <% if current_is_teams %>
-          <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
+          <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-5 dark:group-focus:text-white' %>
         <% else %>
-          <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:gelatine-animation motion-safe:group-focus:gelatine-animation' %>
+          <%= inline_svg_tag 'icons/team.svg', class: 'size-5 dark:group-focus:text-white motion-safe:group-hover:gelatine-animation motion-safe:group-focus:gelatine-animation' %>
         <% end %>
         <span>Teams</span>
       <% end %>
 
       <%= link_to search_path, aria: { current: current_is_search ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_search}" do %>
         <% if current_is_search %>
-          <%= inline_svg_tag 'icons/search-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
+          <%= inline_svg_tag 'icons/search-filled.svg', class: 'size-5 dark:group-focus:text-white' %>
         <% else %>
-          <%= inline_svg_tag 'icons/search.svg', class: 'size-5 text-soft dark:group-focus:text-white motion-safe:group-hover:wiggle-animation motion-safe:group-focus:wiggle-animation' %>
+          <%= inline_svg_tag 'icons/search.svg', class: 'size-5 dark:group-focus:text-white motion-safe:group-hover:wiggle-animation motion-safe:group-focus:wiggle-animation' %>
         <% end %>
         <span>Search</span>
       <% end %>
 
       <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_edit_user}" do %>
         <% if current_is_edit_user %>
-          <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-5 text-soft dark:group-focus:text-white' %>
+          <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-5 dark:group-focus:text-white' %>
         <% else %>
-          <%= inline_svg_tag 'icons/settings.svg', class: 'size-5 text-soft dark:group-focus:text-white spin-animation motion-safe:group-hover:spin motion-safe:group-focus:spin' %>
+          <%= inline_svg_tag 'icons/settings.svg', class: 'size-5 dark:group-focus:text-white spin-animation motion-safe:group-hover:spin motion-safe:group-focus:spin' %>
         <% end %>
         <span>Settings</span>
       <% end %>
